fixed error & loading modals z-index

--- a/Login.css
+++ b/Login.css
@@ -127,6 +127,7 @@ body {
     background-color: #333;
     opacity: 0.9;
     display: none;
+    z-index: 3;
 }
 .modals_page {
     width: 100%;
@@ -166,6 +167,7 @@ body {
     background-color: #333;
     opacity: 0.9;
     display: none;
+    z-index: 3;
 }
 .error_box {
     width: 400px;
